# pretalx-plugin-development-demo

./: LICENSE  MANIFEST.in  Makefile  README.md  README_original.rst  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: style.yml
pretalx_foobar/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
pretalx_foobar/templates/pretalx_foobar/: settings.html
